# astroai-workload

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
LICENSES/: MIT.txt
benchmarks/: __init__.py  bench_ray_contract.py
examples/mnist_cnn/: README.md  infer.py  submit.py  train.py
src/astroai_workload/: __init__.py  executor.py  facility.py  models.py
tests/: test_benchmark_contract.py  test_executor.py  test_models.py
