[project]
name = "astroai-workload"
version = "0.1.0"
description = "Small execution and provenance contracts for AstroAI workloads"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSES/MIT.txt"]
authors = [{ name = "Simon Fabbro" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "ray[default]>=2.40",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astroai_workload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
